--- a/MyRecipeApp.ClientApp/package.json
+++ b/MyRecipeApp.ClientApp/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "axios": "^0.26.0",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
@@ -11,7 +15,6 @@
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
