Error handling middleware on front and back

--- a/MyRecipeApp.Services/MyRecipeApp.Services.csproj
+++ b/MyRecipeApp.Services/MyRecipeApp.Services.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="LinqKit" Version="1.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
